# linear-records

./: README.md  default.nix  linear-records.cabal
bench/: Main.hs
nix/: sources.json
src/Data/Record/: Linear.hs
test/: Main.hs
